--- a/index.html
+++ b/index.html
@@ -45,25 +45,22 @@
             </nav>
         </div>
         <header
-            class="top-image-container d-flex display-column min-vh-100 align-items-center justify-content-center text-center m-5 p-1">
+            class="top-image-container d-flex display-column min-vh-100 align-items-center justify-content-center text-center mx-sm-0 mx-md-0 mx-lg-5 mx-xl-5 mt-sm-0 mt-md-0 p-0">
             <div class="col lh-lg">
                 <h1>Adrenaline Picker</h1>
-                
                 <h6 class="fs-5">Are you tired of daily routine? </h6>
-                <h6 class="fs-5">Are you looking for some new experience or new life approach?</h6>  
-                    <h6 class="fs-5">We are here for you!</h6>
+                <h6 class="fs-5">Are you looking for some new experience or new life approach?</h6>
+                <h6 class="fs-5">We are here for you!</h6>
                 </h6>
                 <h6 class="fs-5">Join our three-level complexity Adrenaline Picker program, </h6>
-                   <h6 class="fs-5"> choose one and embrace the world full of
+                <h6 class="fs-5"> choose one and embrace the world full of
                     fascinating adventures.</h6>
-
                 <h4 class="fs-3">Future is now.</h4>
             </div>
         </header>
-
         <div
-            class="row all-carousels-row mx-sm-0 mx-md-3 mx-lg-5 mx-xl-5 px-sm-0 px-md-3 px-lg-5 px-xl-5 d-flex justify-content-center">
-            <div class="col-xxl-9 col-xl-9 col-lg-9 col-md-12 col-sm-12">
+            class="row all-carousels-row mx-sm-0 mx-md-3 mx-lg-5 mx-xl-5 px-sm-3 px-md-3 px-lg-5 px-xl-5 d-flex justify-content-center">
+            <div class="col-xxl-9 col-xl-9 col-lg-9 col-md-12 col-sm-12 p-4">
                 <div class="card mt-5 p-0 carousel-1-and-description-card">
                     <div id="carouselExampleIndicators" class="carousel slide card-img-top" data-bs-ride="carousel">
                         <div class="carousel-indicators">
