--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>    
+<body>
     <div class="container-fluid d-flex flex-column min-vh-100 p-0">
         <div class="row logo-row">
             <nav class="navbar navbar-expand-lg navbar-dark py-0">
@@ -43,49 +43,43 @@
                 </div>
             </nav>
         </div>
-
-
-        <div class="row form-signin sea d-flex min-vh-100 justify-content-center align-items-center">
-            <div class="col-auto align-middle">
-
-                <div class="gradient-background p-3"> 
-
-                <form method=" POST">
-                    <h1 class="h3 mb-3 fw-normal fs-1">Please sign in</h1>
-                    <div class="form-floating">
-                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" required>
-                        <label for="floatingInput">Email address</label>
-                    </div>
-                    <div class="form-floating">
-                        <input type="password" class="form-control" id="floatingPassword" placeholder="Password" required>
-                        <label for="floatingPassword">Password</label>
-                    </div>
-                    <div class="checkbox mb-3">
-                        <label>
-                            <input type="checkbox" value="remember-me"> Remember me
-                        </label>
-                    </div>
-                    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-                </form>
-            </div>
-            
+        <div class="row form-signin sea min-vh-100">
+            <div class=" d-flex justify-content-center align-items-center">
+                <div class=" gradient-background p-3 col-xxl-2 col-xl-3 col-lg-4 col-md-5 col-sm-6 col-xs-12">
+                    <form method=" POST">
+                        <h1 class="h3 mb-3 text-center">Please sign in</h1>
+                        <div class="form-floating">
+                            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com"
+                                required>
+                            <label for="floatingInput">Email address</label>
+                        </div>
+                        <div class="form-floating">
+                            <input type="password" class="form-control" id="floatingPassword" placeholder="Password"
+                                required>
+                            <label for="floatingPassword">Password</label>
+                        </div>
+                        <div class="checkbox mb-3">
+                            <label>
+                                <input type="checkbox" value="remember-me"> Remember me
+                            </label>
+                        </div>
+                        <button class="w-100 btn btn-lg btn-dark" type="submit">Sign in</button>
+                    </form>
+                </div>
             </div>
         </div>
-        
-    </div>
-
-    <div class="row footer-row">
-        <div class="footer-text my-3 text-center">
-            <h5>Contacts</h5>
-            <p>info@adrenalinepicker.com</p>
-            <p>+371 22000009</p>
-            <p>Rīgas street 5, Rīga, Latvia</p>
-            <p>© 2021 Copyright: Adventure Corp. All rights reserved.</p>
+        <div class="row footer-row">
+            <div class="footer-text my-3 text-center">
+                <h5>Contacts</h5>
+                <p>info@adrenalinepicker.com</p>
+                <p>+371 22000009</p>
+                <p>Rīgas street 5, Rīga, Latvia</p>
+                <p>© 2021 Copyright: Adventure Corp. All rights reserved.</p>
+            </div>
         </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
