--- a/pricing.html
+++ b/pricing.html
@@ -44,7 +44,7 @@
                 </div>
             </nav>
         </div>
-        <div class="container-sm text-center pricing-middle-content min-vh-100">
+        <div class="container-sm text-center pricing-middle-content min-vh-100 p-3">
             <h1 class="fw-normal mt-5"> Mild Adventure</h1>
             <p class="mb-4 px-4">Quickly built and effective pricing table for your potential customer with this
                 Bootstrap
@@ -89,113 +89,114 @@
                         </div>
                     </div>
                 </div>
-                <h1 class="fw-normal mt-5">Medium Adventure</h1>
-                <p class="mb-4 px-4">Quickly built and effective pricing table for your potential customer with this
-                    Bootstrap
-                    example. It's built with Bootstrap default components and utilities with little customization.</p>
-                <div class="row">
-                    <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 text-center mt-3">
-                        <div class="card shadow-sm">
-                            <h5 class="card-header">1 Day</h5>
-                            <div class="card-body card-body-second-row">
-                                <h3 class="card-title">$250</h3>
-                                <p class="card-text mb-0">Expert's consultation 1 week before selected date</p>
-                                <p class="card-text mb-0">...</p>
-                                <p class="card-text mb-0">Transportation</p>
-                                <p class="card-text">Food and beverages</p>
-                                <a href="" class=" d-grid gap-2 btn btn-outline-primary">Buy</a>
-                            </div>
+            </div>
+            <h1 class="fw-normal mt-5">Medium Adventure</h1>
+            <p class="mb-4 px-4">Quickly built and effective pricing table for your potential customer with this
+                Bootstrap
+                example. It's built with Bootstrap default components and utilities with little customization.</p>
+            <div class="row">
+                <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 text-center mt-3">
+                    <div class="card shadow-sm">
+                        <h5 class="card-header">1 Day</h5>
+                        <div class="card-body card-body-second-row">
+                            <h3 class="card-title">$250</h3>
+                            <p class="card-text mb-0">Expert's consultation 1 week before selected date</p>
+                            <p class="card-text mb-0">...</p>
+                            <p class="card-text mb-0">Transportation</p>
+                            <p class="card-text">Food and beverages</p>
+                            <a href="" class=" d-grid gap-2 btn btn-outline-primary">Buy</a>
                         </div>
                     </div>
-                    <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 text-center mt-3">
-                        <div class="card shadow-sm">
-                            <h5 class=" card-header">3 Days</h5>
-                            <div class="card-body card-body-second-row">
-                                <h3 class="card-title">$650</h3>
-                                <p class="card-text mb-0">Expert's consultation 2 weeks before selected dates</p>
-                                <p class="card-text mb-0">Accomodation</p>
-                                <p class="card-text mb-0">Transportation</p>
-                                <p class="card-text">Food and beverages</p>
-                                <a href="" class=" d-grid gap-2 btn btn-outline-primary">Buy</a>
-                            </div>
+                </div>
+                <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 text-center mt-3">
+                    <div class="card shadow-sm">
+                        <h5 class=" card-header">3 Days</h5>
+                        <div class="card-body card-body-second-row">
+                            <h3 class="card-title">$650</h3>
+                            <p class="card-text mb-0">Expert's consultation 2 weeks before selected dates</p>
+                            <p class="card-text mb-0">Accomodation</p>
+                            <p class="card-text mb-0">Transportation</p>
+                            <p class="card-text">Food and beverages</p>
+                            <a href="" class=" d-grid gap-2 btn btn-outline-primary">Buy</a>
                         </div>
                     </div>
-                    <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 text-center mt-3">
-                        <div class="card shadow-sm">
-                            <h5 class=" card-header">7 Days</h5>
-                            <div class="card-body card-body-second-row">
-                                <h3 class="card-title">$1200</h3>
-                                <p class="card-text mb-0">Expert's consultation 3 weeks before selected dates</p>
-                                <p class="card-text mb-0">Accomodation</p>
-                                <p class="card-text mb-0">Transportation</p>
-                                <p class="card-text">Food and beverages</p>
-                                <a href="" class=" d-grid gap-2 btn btn-outline-primary">Buy</a>
-                            </div>
+                </div>
+                <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 text-center mt-3">
+                    <div class="card shadow-sm">
+                        <h5 class=" card-header">7 Days</h5>
+                        <div class="card-body card-body-second-row">
+                            <h3 class="card-title">$1200</h3>
+                            <p class="card-text mb-0">Expert's consultation 3 weeks before selected dates</p>
+                            <p class="card-text mb-0">Accomodation</p>
+                            <p class="card-text mb-0">Transportation</p>
+                            <p class="card-text">Food and beverages</p>
+                            <a href="" class=" d-grid gap-2 btn btn-outline-primary">Buy</a>
                         </div>
                     </div>
-                    <h1 class="fw-normal mt-5">Extreme Adventure</h1>
-                    <p class="mb-4 px-4">Quickly built and effective pricing table for your potential customer with this
-                        Bootstrap
-                        example. It's built with Bootstrap default components and utilities with little customization.
-                    </p>
-                    <div class="row mb-5">
-                        <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 text-center my-3">
-                            <div class="card shadow-sm">
-                                <h5 class="card-header">1 Day</h5>
-                                <div class="card-body card-body-third-row">
-                                    <h3 class="card-title">$500</h3>
-                                    <p class="card-text mb-0">Expert's consultation 1 week before selected date</p>
-                                    <p class="card-text mb-0">...</p>
-                                    <p class="card-text mb-0">Transportation</p>
-                                    <p class="card-text">Food and beverages</p>
-                                    <a href="" class=" d-grid gap-2 btn btn-outline-dark">Buy</a>
-                                </div>
-                            </div>
+                </div>
+            </div>
+            <h1 class="fw-normal mt-5">Extreme Adventure</h1>
+            <p class="mb-4 px-4">Quickly built and effective pricing table for your potential customer with this
+                Bootstrap
+                example. It's built with Bootstrap default components and utilities with little customization.
+            </p>
+            <div class="row mb-5">
+                <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 text-center my-3">
+                    <div class="card shadow-sm">
+                        <h5 class="card-header">1 Day</h5>
+                        <div class="card-body card-body-third-row">
+                            <h3 class="card-title">$500</h3>
+                            <p class="card-text mb-0">Expert's consultation 1 week before selected date</p>
+                            <p class="card-text mb-0">...</p>
+                            <p class="card-text mb-0">Transportation</p>
+                            <p class="card-text">Food and beverages</p>
+                            <a href="" class=" d-grid gap-2 btn btn-outline-dark">Buy</a>
                         </div>
-                        <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 text-center mt-3">
-                            <div class="card shadow-sm">
-                                <h5 class=" card-header">3 Days</h5>
-                                <div class="card-body card-body-third-row">
-                                    <h3 class="card-title">$1000</h3>
-                                    <p class="card-text mb-0">Expert's consultation 2 weeks before selected dates</p>
-                                    <p class="card-text mb-0">Accomodation</p>
-                                    <p class="card-text mb-0">Transportation</p>
-                                    <p class="card-text">Food and beverages</p>
-                                    <a href="" class=" d-grid gap-2 btn btn-outline-dark">Buy</a>
-                                </div>
-                            </div>
+                    </div>
+                </div>
+                <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 text-center mt-3">
+                    <div class="card shadow-sm">
+                        <h5 class=" card-header">3 Days</h5>
+                        <div class="card-body card-body-third-row">
+                            <h3 class="card-title">$1000</h3>
+                            <p class="card-text mb-0">Expert's consultation 2 weeks before selected dates</p>
+                            <p class="card-text mb-0">Accomodation</p>
+                            <p class="card-text mb-0">Transportation</p>
+                            <p class="card-text">Food and beverages</p>
+                            <a href="" class=" d-grid gap-2 btn btn-outline-dark">Buy</a>
                         </div>
-                        <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 text-center mt-3">
-                            <div class="card shadow-sm">
-                                <h5 class=" card-header">7 Days</h5>
-                                <div class="card-body card-body-third-row">
-                                    <h3 class="card-title">$2000</h3>
-                                    <p class="card-text mb-0">Expert's consultation 1 month before selected dates</p>
-                                    <p class="card-text mb-0">Accomodation</p>
-                                    <p class="card-text mb-0">Transportation</p>
-                                    <p class="card-text">Food and beverages</p>
-                                    <a href="" class=" d-grid gap-2 btn btn-outline-dark">Buy</a>
-                                </div>
-                            </div>
+                    </div>
+                </div>
+                <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 text-center mt-3">
+                    <div class="card shadow-sm">
+                        <h5 class=" card-header">7 Days</h5>
+                        <div class="card-body card-body-third-row">
+                            <h3 class="card-title">$2000</h3>
+                            <p class="card-text mb-0">Expert's consultation 1 month before selected dates</p>
+                            <p class="card-text mb-0">Accomodation</p>
+                            <p class="card-text mb-0">Transportation</p>
+                            <p class="card-text">Food and beverages</p>
+                            <a href="" class=" d-grid gap-2 btn btn-outline-dark">Buy</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row footer-row">
-            <div class="footer-text my-3 text-center">
-                <h5>Contacts</h5>
-                <p>info@adrenalinepicker.com</p>
-                <p>+371 22000009</p>
-                <p>Rīgas street 5, Rīga, Latvia</p>
-                <p>© 2021 Copyright: Adventure Corp. All rights reserved.</p>
-            </div>
+    </div>
+    </div>
+    <div class="row footer-row">
+        <div class="footer-text my-3 text-center">
+            <h5>Contacts</h5>
+            <p>info@adrenalinepicker.com</p>
+            <p>+371 22000009</p>
+            <p>Rīgas street 5, Rīga, Latvia</p>
+            <p>© 2021 Copyright: Adventure Corp. All rights reserved.</p>
         </div>
+    </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-            crossorigin="anonymous"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
