--- a/register.html
+++ b/register.html
@@ -44,65 +44,66 @@
                 </div>
             </nav>
         </div>
-        <div class="row register-middle-content min-vh-100 ">
-            <div class="col pt-3">
-                <div class="row mx-3 mx-sm-0 mx-md-3 mx-lg-3 mx-xl-5 my-4">
-                    <h3>Register</h3>
-                </div>
-                <div class="row register-row mx-3 mx-sm-0 mx-md-3 mx-lg-3 mx-xl-5 my-4">
-                    <div class="col-xxl-3 col-xl-3 col-lg-4 col-md-5 col-sm-6 col-xs-12">
-                        <form class="register-form" method="POST">
-                            <div class="row">
-                                <div class="col-12 mb-3">
-                                    <input type="text" name="username" id="register-username-field" class="form-control"
-                                        placeholder="Username*">
-                                </div>
-                                <div class="col-12 mb-3">
-                                    <input type="password" name="password" id="input-pasword-field" class="form-control"
-                                        placeholder="Password*">
-                                </div>
-                                <div class="col-12 mb-3">
-                                    <input type="password" name="retype_password" id="input-retype-pasword-field"
-                                        class="form-control" placeholder="Retype Password*">
-                                </div>
-                                <div class="col-12 mb-3">
-                                    <input type="text" name="name" id="input-first-name-field" class="form-control"
-                                        placeholder="First Name*">
-                                </div>
-                                <div class="col-12 mb-3">
-                                    <input type="text" name="last_name" id="input-last-name-field" class="form-control"
-                                        placeholder="Last Name">
-                                </div>
-                                <div class="col-12 mb-3">
-                                    <select class="form-select" aria-label="Default select example" name="country"
-                                        id="input-country-field">
-                                        <option selected disabled>Country*</option>
-                                        <option value="1">Latvia</option>
-                                        <option value="2">Lithuania</option>
-                                        <option value="3">Estonia</option>
-                                    </select>
-                                </div>
-                                <div class="col-12 mb-3">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="1" name="agree"
-                                            id="checkbox-terms-conditions">
-                                        <label class="form-check-label" for="checkbox-terms-conditions">
-                                            Agree with terms and conditions
-                                        </label>
+        <div class="row register-middle-content min-vh-100 justify-content-center align-items-center p-4">
+            <div class="d-flex justify-content-center align-items-center">
+                <div class="col-xxl-2 col-xl-3 col-lg-4 col-md-5 col-sm-6 col-xs-12 register-container p-3">
+                    <div class="row mx-3 mx-sm-0 mx-md-3 mx-lg-3 mx-xl-5 my-4 text-center">
+                        <h3>Register</h3>
+                    </div>
+                    <div class="row register-row pb-3 justify-content-center">
+                        <div>
+                            <form class="register-form" method="POST">
+                                <div class="row">
+                                    <div class="col-12 mb-3">
+                                        <input type="text" name="username" id="register-username-field"
+                                            class="form-control" placeholder="Username*">
+                                    </div>
+                                    <div class="col-12 mb-3">
+                                        <input type="password" name="password" id="input-pasword-field"
+                                            class="form-control" placeholder="Password*">
+                                    </div>
+                                    <div class="col-12 mb-3">
+                                        <input type="password" name="retype_password" id="input-retype-pasword-field"
+                                            class="form-control" placeholder="Retype Password*">
+                                    </div>
+                                    <div class="col-12 mb-3">
+                                        <input type="text" name="name" id="input-first-name-field" class="form-control"
+                                            placeholder="First Name*">
+                                    </div>
+                                    <div class="col-12 mb-3">
+                                        <input type="text" name="last_name" id="input-last-name-field"
+                                            class="form-control" placeholder="Last Name">
+                                    </div>
+                                    <div class="col-12 mb-3">
+                                        <select class="form-select" aria-label="Default select example" name="country"
+                                            id="input-country-field">
+                                            <option selected disabled>Country*</option>
+                                            <option value="1">Latvia</option>
+                                            <option value="2">Lithuania</option>
+                                            <option value="3">Estonia</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-12 mb-3">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" value="1" name="agree"
+                                                id="checkbox-terms-conditions">
+                                            <label class="form-check-label" for="checkbox-terms-conditions">
+                                                Agree with terms and conditions
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 register-btn">
+                                        <button type="submit" class="btn btn-dark" style="width:100%"
+                                            value="Submit">Register</button>
                                     </div>
                                 </div>
-                                <div class="col-md-6 col-sm-12 register-btn">
-                                    <button type="submit" class="btn btn-dark" style="width:100%"
-                                        value="Submit">Register</button>
-                                </div>
-                            </div>
-                        </form>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
     <div class="row footer-row">
         <div class="footer-text my-3 text-center">
             <h5>Contacts</h5>
@@ -112,7 +113,6 @@
             <p>© 2021 Copyright: Adventure Corp. All rights reserved.</p>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
