--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </nav>
         </div>
         <header
-            class="top-image-container d-flex display-column min-vh-100 align-items-center justify-content-center text-center mx-sm-0 mx-md-0 mx-lg-5 mx-xl-5 mt-sm-0 mt-md-0 p-0">
+            class="top-image-container d-flex display-column min-vh-100 align-items-center justify-content-center text-center mx-sm-0 mx-md-0 mx-lg-5 mx-xl-5 mt-sm-0 mt-md-0 mt-lg-5 p-0">
             <div class="col lh-lg">
                 <h1>Adrenaline Picker</h1>
                 <h6 class="fs-5">Are you tired of daily routine? </h6>
