add style and text for carousels

--- a/pricing.html
+++ b/pricing.html
@@ -46,9 +46,11 @@
         </div>
         <div class="container-sm text-center pricing-middle-content min-vh-100 p-3">
             <h1 class="fw-normal mt-5"> Mild Adventure</h1>
-            <p class="mb-4 px-4">Quickly built and effective pricing table for your potential customer with this
-                Bootstrap
-                example. It's built with Bootstrap default components and utilities with little customization.</p>
+            <p class="mb-4 px-4">
+                Do you know how it feels to fly in the hot air baloon, with a deltaplane or a paraglider, 
+                to dive deep into the beautiful underwater world and how amazing it can be? This and much 
+                more is waiting for you in our Mild Adventure program!
+            </p>
             <div class="row">
                 <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 text-center mt-3">
                     <div class="card shadow-sm">
@@ -91,9 +93,11 @@
                 </div>
             </div>
             <h1 class="fw-normal mt-5">Medium Adventure</h1>
-            <p class="mb-4 px-4">Quickly built and effective pricing table for your potential customer with this
-                Bootstrap
-                example. It's built with Bootstrap default components and utilities with little customization.</p>
+            <p class="mb-4 px-4">
+                If you're opened for some more adrenaline and feel ready for challenging yourself to dive even deeper 
+                and fly even higher to feel even more excited about your growing ability to step out of your comfort zone,
+                then this package is waiting exactly for you. 
+            </p>
             <div class="row">
                 <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 text-center mt-3">
                     <div class="card shadow-sm">
@@ -136,9 +140,10 @@
                 </div>
             </div>
             <h1 class="fw-normal mt-5">Extreme Adventure</h1>
-            <p class="mb-4 px-4">Quickly built and effective pricing table for your potential customer with this
-                Bootstrap
-                example. It's built with Bootstrap default components and utilities with little customization.
+            <p class="mb-4 px-4">
+                If your brave adventurer soul have already experienced lots of exciting, crazy things in your life but you still have a 
+                wish for something more then this package is exactly the right choice for you.
+                Let it surprise you.
             </p>
             <div class="row mb-5">
                 <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 text-center my-3">
