--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
                 <h4 class="fs-3">Future is now.</h4>
             </div>
         </header>
+        <div class="display-column align-items-center justify-content-center text-center mx-sm-0 mx-md-0 mx-lg-5 mx-xl-3 mt-sm-0 mt-md-0 mt-lg-4">
+            <h6> 
+                Pick one of our three Adrenaline Level Packages - Mild, Medium or Extreme - which includes the expert's consultation
+                about your desired adrenaline level, </h6>
+                <h6> choose the length of adventure which best suits you, </h6>
+                <h6> then just fasten your safety belts to get ready for the probably most exiting adventure you ever had!
+            </h6>
+        </div>
         <div
             class="row all-carousels-row mx-sm-0 mx-md-3 mx-lg-5 mx-xl-5 px-sm-3 px-md-3 px-lg-5 px-xl-5 d-flex justify-content-center">
             <div class="col-xxl-9 col-xl-9 col-lg-9 col-md-12 col-sm-12 p-4">
@@ -107,12 +115,14 @@
                             <span class="visually-hidden">Next</span>
                         </button>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional
-                            content. This content is a little bit longer.</p>
-                        <a href="./pricing.html" class="btn btn-primary">Price</a>
+                    <div class="card-body mild-carousel">
+                        <h5 class="card-title">Mild adventure</h5>
+                        <p class="card-text">
+                           Do you know how it feels to fly in the hot air baloon, with a deltaplane or a paraglider, 
+                           to dive deep into the beautiful underwater world and how amazing it can be? This and much 
+                           more is waiting for you in our Mild Adventure program!
+                        </p>
+                        <a href="./pricing.html" class="d-grid gap-2 btn btn-outline-success">Price</a>
                     </div>
                 </div>
                 <div class="card mt-5 p-0 carousel-2-and-description-card">
@@ -149,12 +159,15 @@
                             <span class="visually-hidden">Next</span>
                         </button>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional
-                            content. This content is a little bit longer.</p>
-                        <a href="./pricing.html" class="btn btn-primary">Price</a>
+                    <div class="card-body medium-carousel">
+                        <h5 class="card-title">Medium adventure</h5>
+                        <p class="card-text">
+                            If you're opened for some more adrenaline and feel ready for challenging yourself to dive even deeper 
+                            and fly even higher to feel even more excited about your growing ability to step out of your comfort zone,
+                            then this package is waiting exactly for you. 
+                            
+                        </p>
+                        <a href="./pricing.html" class="d-grid gap-2 btn btn-outline-primary">Price</a>
                     </div>
                 </div>
                 <div class="card mt-5 p-0 carousel-3-and-description-card">
@@ -203,12 +216,14 @@
                             <span class="visually-hidden">Next</span>
                         </button>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional
-                            content. This content is a little bit longer.</p>
-                        <a href="./pricing.html" class="btn btn-primary">Price</a>
+                    <div class="card-body extreme-carousel">
+                        <h5 class="card-title">Extreme adventure</h5>
+                        <p class="card-text">
+                            If your brave adventurer soul have already experienced lots of exciting, crazy things in your life but you still have a 
+                            wish for something more then this package is exactly the right choice for you.
+                            Let it surprise you.
+                        </p>
+                        <a href="./pricing.html" class="d-grid gap-2 btn btn-outline-dark">Price</a>
                     </div>
                 </div>
             </div>
